# kmer_search

./: Cargo.toml
src/: main.rs  utils.rs
src/utils/: arg_parse.rs  search_trgs.rs  window_generate.rs
