[package]
name = "trigger_plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_fasta = {path = "../calculate_shannon_entropy/calculate_entropy/lib"}
env_logger = "0.10.0"
log = { version = "0.4.20", features = [] }
regex = "1.9.5"
ahash = "0.8.3"
num_cpus = "1.16.0"
futures = { version = "0.3.28", features = ["thread-pool"] }
threadpool = "1.8.1"
rayon = "1.8.0"

[dependencies.clap]
version = "4.4.4"
features = ["derive"]
